test/errors/expr_string_combine.py
print("" b"")
print("a" "b" b"c")
print(b"x" "y" b"z")
print("a" b"b" "c" b"d" "e" b"f")
